style.css
*, *::after {
  box-sizing: border-box; /*-- sets box math for all elements --*/
}

.flex-container{
  display: flex; /* or inline-flex */
  flex-direction: row;
  flex-wrap: wrap;
}

.flex-item{
  display: flex;
  flex-direction: column;
  padding: 2rem .5rem;
  border: 1px solid #dadada;
}

.item-title{
  font-family: 'Dancing Script';
  align-self: center;
  font-size: 25px;
}

.item-text{
  font-family: 'Libre Baskerville';
  align-self: center;
  font-size: 10px;
  padding: .5rem .5rem
}

.item-button{
  align-self: center;
}

.item-image { /*-- general styles for card images --*/
  background-size: cover;  /*-- sets images size to cover --*/
  background-position: center center;  /*-- certers verically and horizontally --*/
  filter: contrast(70%); /*-- adds 70% contrast filter to image --*/
  transition: filter 0.3s ease-in;  /*-- sets filter transition speed and easing --*/
}
.flex-item:hover .item-image {
    filter: contrast(100%);  /*-- transitions to 100% filter on hover --*/
}

img{
  border: 2px solid #dadada;
  width: 100%;
}

@media screen and (min-width: 550px) {  /*-- for screens above 550px  --*/
  .flex-item {width: 50%;} /*-- sets card width to half of the page --*/
}
@media screen and (min-width: 1024px) { /*-- for screens above 1024px  --*/
  .flex-item {width: 33.33333%;} /*-- sets card width to one-third of the page --*/
}
@media screen and (min-width: 1280px) { /*-- for screens above 1280px  --*/
  .flex-item {width: 25%;} /*-- sets card width to one-quarter of the page --*/
}

